灰度判断逻辑优化